--- a/back_101.html
+++ b/back_101.html
@@ -103,76 +103,94 @@
     </div><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Pull-Ups</div>
-            <div class="card-body text-center">
-              <img src="pull_ups.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 15, 12, 10)</i></p>
-              <p><i>*Use a modified pull-up machine if body weight is too heavy*</i></p>
-              <p><u>Info</u>: There will be 3 sets. Each will emphasize high repetitions with good form. Use a wide grip to focus more on the back. Decrease amount of reps each set.</p>
-              <p><u>Form</u>: Grab the bar just outside of shoulder width apart. Lean back slightly and pull yourself up, focusing on your back contraction. Bring your chin to the bar then lower yourself until you’re at a dead hang.</p>
-            </div>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Pull-Ups</div>
+          <img class="card-img-top" src="pull_ups.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 15, 12, 10)</i></p>
+            <p class="card-text text-center text-danger"><i><b>*Use a modified pull-up machine if body weight is too heavy*</b></i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Each will emphasize high repetitions with good form. Use a wide
+              grip to focus more on the back. Decrease amount of reps each set.</p>
+            <p class="card-text"><u>Form</u>: Grab the bar just outside of shoulder width apart. Lean back slightly and pull yourself
+               up, focusing on your back contraction. Bring your chin to the bar then lower yourself until you’re
+                at a dead hang.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Barbell Rows</div>
-            <div class="card-body text-center">
-              <img src="row_bb.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 10, 10, 10, 10)</i></p>
-              <p><u>Info</u>: There will be 4 sets. All will have an emphasis on control. Perform 10 repetitions for each set and keep the weight constant.</p>
-              <p><u>Form</u>: Keep your feet at a standard standing width. With an arched back, bend at the knees to pick up the barbell with palms facing toward you. Lift your chest and slightly straighten your legs to pick the bar up. Bring the bar from a dead hang toward you, keeping your arms close to your sides. Pretend you are squeezing and egg between your shoulder blades. Contract at the top and lower to a dead hang.</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">Barbell Rows</div>
+          <img class="card-img-top" src="row_bb.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 10, 10, 10, 10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. All will have an emphasis on control. Perform 10 repetitions for
+              each set and keep the weight constant.</p>
+            <p class="card-text"><u>Form</u>: Keep your feet at a standard standing width. With an arched back, bend at the knees to
+              pick up the barbell with palms facing toward you. Lift your chest and slightly straighten your legs
+              to pick the bar up. Bring the bar from a dead hang toward you, keeping your arms close to your sides.
+              Pretend you are squeezing and egg between your shoulder blades. Contract at the top and lower to a
+              dead hang.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Dumbbell Rows</div>
-            <div class="card-body text-center">
-              <img src="row_db.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 12, 12, 10, 10)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Each will contain an individual set for each of the arms. Lean on a bench and perform the repetitions for your dominant side then perform the repetitions for the opposite side. After completing both arms, the set will be finished. Increase the weight and decrease the reps after the second set.</p>
-              <p><u>Form</u>: Placing one hand in front of you on a bench, grasp a dumbbell with the other hand and lift it up so that it is at a dead hang and your back is parallel with the ground. Keeping your elbow close to your body, row the dumbell toward your hip and bring your elbow up to achieve a squeeze in the back. Lower the dumbbell back to a dead hang.</p>
-            </div>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Dumbbell Rows</div>
+          <img class="card-img-top" src="row_db.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(4 sets | 12, 12, 10, 10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Each will contain an individual set for each of the arms. Lean on
+              a bench and perform the repetitions for your dominant side then perform the repetitions for the
+              opposite side. After completing both arms, the set will be finished. Increase the weight and decrease
+              the reps after the second set.</p>
+            <p class="card-text"><u>Form</u>: Placing one hand in front of you on a bench, grasp a dumbbell with the other hand and
+              lift it up so that it is at a dead hang and your back is parallel with the ground. Keeping your elbow
+              close to your body, row the dumbell toward your hip and bring your elbow up to achieve a squeeze in the
+               back. Lower the dumbbell back to a dead hang.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Lat Pulldowns</div>
-            <div class="card-body text-center">
-              <img src="lat_pulldown.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 12, 12, 10)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Each will focus on control. Perform this exercise using a wide grip. Increase the weight after the second set.</p>
-              <p><u>Form</u>: Grip the bar slightly outside of shoulder width. Secure yourself in the seat and hold the bar so it is straight above your head. Lean back slightly and pull the bar toward your chin. Make sure that the bar gets below your chin with a slight lean back, and let the bar slowly return to above your head. Move forward with a smooth motion while returning the bar upward so that it creates a straight line once again above you.</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">Lat Pulldowns</div>
+          <img class="card-img-top" src="lat_pulldown.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 12, 12, 10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Each will focus on control. Perform this exercise using a wide
+              grip. Increase the weight after the second set.</p>
+            <p class="card-text"><u>Form</u>: Grip the bar slightly outside of shoulder width. Secure yourself in the seat and hold
+              the bar so it is straight above your head. Lean back slightly and pull the bar toward your chin. Make
+              sure that the bar gets below your chin with a slight lean back, and let the bar slowly return to above
+              your head. Move forward with a smooth motion while returning the bar upward so that it creates a
+              straight line once again above you.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Seated Cable Rows</div>
-            <div class="card-body text-center">
-              <img src="row_cable.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 20, 15, 10)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Each will focus on control. Perform this exercise using a the close grip attachment. Increase the weight each set.</p>
-              <p><u>Form</u>: Grabbing the close grip attachment, use your legs to push yourself away from the weight stack. Slightly lean forward and allow the weight to stretch out your back. As you start to pull the handle toward you, keeping your elbows close to your body and pulling toward your belly button, start leaning back until you slightly lean back when you squeeze the weight. Return to slightly leaning forward with the weight stretching the back.</p>
-            </div>
+    <div class="container">
+      <div class="card-deck mx-auto" style="max-width: 36rem;">
+        <div class="card">
+          <div class="card-header text-center h5">Seated Cable Rows</div>
+          <img class="card-img-top" src="row_cable.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 20, 15, 10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Each will focus on control. Perform this exercise using a the
+              close grip attachment. Increase the weight each set.</p>
+            <p class="card-text"><u>Form</u>: Grabbing the close grip attachment, use your legs to push yourself away from the weight
+               stack. Slightly lean forward and allow the weight to stretch out your back. As you start to pull the
+                handle toward you, keeping your elbows close to your body and pulling toward your belly button, start
+                 leaning back until you slightly lean back when you squeeze the weight. Return to slightly leaning
+                  forward with the weight stretching the back.</p>
           </div>
         </div>
       </div>
-    </div>
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
