--- a/back_102.html
+++ b/back_102.html
@@ -103,78 +103,121 @@
     </div><br><br>
     <!-- BODY -->
     <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Barbell Rows</div>
-            <div class="card-body text-center">
-              <img src="row_bb.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(6 sets | 15, 12, 10, 8, 10, 12)</i></p>
-              <p><u>Info</u>: There will be 6 sets. Start with a weight you can focus on control for higher repetitions and increase the weight 10-15% the following 3 sets. The last 2 sets will decrease in weight 15-20% and increase repetitions.</p>
-              <p><u>Form</u>: Keep your feet at a standard standing width. With an arched back, bend at the knees to pick up the barbell with palms facing toward you. Lift your chest and slightly straighten your legs to pick the bar up. Bring the bar from a dead hang toward you, keeping your arms close to your sides. Pretend you are squeezing and egg between your shoulder blades. Contract at the top and lower to a dead hang.</p>
-            </div>
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Barbell Rows</div>
+          <img class="card-img-top" src="row_bb.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(6 sets | 15, 12, 10, 8, 10, 12)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 6 sets. Start with a weight you can focus on control for higher repetitions
+               and increase the weight 10-15% the following 3 sets. The last 2 sets will decrease in weight 15-20%
+               and increase repetitions.</p>
+            <p class="card-text"><u>Form</u>: Keep your feet at a standard standing width. With an arched back, bend at the knees to
+              pick up the barbell with palms facing toward you. Lift your chest and slightly straighten your legs
+              to pick the bar up. Bring the bar from a dead hang toward you, keeping your arms close to your sides.
+              Pretend you are squeezing and egg between your shoulder blades. Contract at the top and lower to a
+              dead hang.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Lat Pulldowns X Lat Pushdowns</div>
-            <div class="card-body text-center">
-              <img src="lat_pulldown.jpg" class="img-fluid" alt="Responsive image">
-              <img src="lat_pushdown.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(5 sets | 15x15, 12x12, 12x12, 10x10, 10x10)</i></p>
-              <p><u>Info</u>: There will be 5 sets. The start of the movement will be a lat pulldown followed by lat pushdowns with equal repetitions for each exercise. Increase the weight 10-15% for each exercise when there is a decrease in the repetitions.</p>
-              <p><u>Form</u>: For the lat pulldowns, grip the bar slightly outside of shoulder width. Secure yourself in the seat and hold the bar so it is straight above your head. Lean back slightly and pull the bar toward your chin. Make sure that the bar gets below your chin with a slight lean back, and let the bar slowly return to above your head. Move forward with a smooth motion while returning the bar upward so that it creates a straight line once again above you.</p>
-              <p>For the lat pushdowns, stand up and grip the bar overhead with a shoulder width grip. Lean forward so that the rested bar creates a straight line to your hips. With the lean and while keeping your arms straight, bring the bar from above your head to your hips. Return to above your head.</p>
+        <div class="card">
+          <div class="card-header text-center h5">Lat Pulldowns X Lat Pushdowns</div>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="lat_pulldown.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="lat_pushdown.jpg" alt="Second slide">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <div class="card-body">
+            <p class="card-text text-center"><i>(5 sets | 15x15, 12x12, 12x12, 10x10, 10x10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 5 sets. The start of the movement will be a lat pulldown followed by lat
+              pushdowns with equal repetitions for each exercise. Increase the weight 10-15% for each exercise when
+              there is a decrease in the repetitions.</p>
+            <p class="card-text"><u>Form</u>: For the lat pulldowns, grip the bar slightly outside of shoulder width. Secure yourself
+              in the seat and hold the bar so it is straight above your head. Lean back slightly and pull the bar
+              toward your chin. Make sure that the bar gets below your chin with a slight lean back, and let the bar
+              slowly return to above your head. Move forward with a smooth motion while returning the bar upward so
+              that it creates a straight line once again above you.</p>
+            <p class="card-text">For the lat pushdowns, stand up and grip the bar overhead with a shoulder width grip. Lean forward so
+              that the rested bar creates a straight line to your hips. With the lean and while keeping your arms
+              straight, bring the bar from above your head to your hips. Return to above your head.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Dumbbell Rows</div>
-            <div class="card-body text-center">
-              <img src="row_db.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(4 sets | 10-5, 10-5, 8-5, 5-10)</i></p>
-              <p><u>Info</u>: There will be 4 sets. Each will be followed by a drop set of pause reps. Start with a heavier weight for the first part of the set and decrease the weight 30-45% for the second part of the set. The first part will follow a consistent 1-count up and 1-count negative and the second part will focus on a 1-count up, 1-count hold, and 3-count negative.</p>
-              <p><u>Form</u>: Placing one hand in front of you on a bench, grasp a dumbbell with the other hand and lift it up so that it is at a dead hang and your back is parallel with the ground. Keeping your elbow close to your body, row the dumbell toward your hip and bring your elbow up to achieve a squeeze in the back. Lower the dumbbell back to a dead hang.</p>
-            </div>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-header text-center h5">Dumbbell Rows<</div>
+          <img class="card-img-top" src="row_db.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i><(4 sets | 10-5, 10-5, 8-5, 5-10)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 4 sets. Each will be followed by a drop set of pause reps. Start with a
+              heavier weight for the first part of the set and decrease the weight 30-45% for the second part of the
+              set. The first part will follow a consistent 1-count up and 1-count negative and the second part will
+              focus on a 1-count up, 1-count hold, and 3-count negative.</p>
+            <p class="card-text"><u>Form</u>: Placing one hand in front of you on a bench, grasp a dumbbell with the other hand and
+              lift it up so that it is at a dead hang and your back is parallel with the ground. Keeping your elbow
+              close to your body, row the dumbell toward your hip and bring your elbow up to achieve a squeeze in the
+               back. Lower the dumbbell back to a dead hang.</p>
           </div>
         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Pull-Ups</div>
-            <div class="card-body text-center">
-              <img src="pull_ups.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 10, 10, 10)</i></p>
-              <p><i>*Use a modified pull-up machine if body weight is too heavy*</i></p>
-              <p><u>Info</u>: There will be 3 sets. Each will emphasize high repetitions with good form. Use a wide grip to focus more on the back.</p>
-              <p><u>Form</u>: Grab the bar just outside of shoulder width apart. Lean back slightly and pull yourself up, focusing on your back contraction. Bring your chin to the bar then lower yourself until you’re at a dead hang.</p>
-            </div>
+        <div class="card">
+          <div class="card-header text-center h5">Pull-Ups</div>
+          <img class="card-img-top" src="pull_ups.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 10, 10, 10)</i></p>
+            <p class="card-text text-center text-danger"><i><b>*Use a modified pull-up machine if body weight is too heavy*</b></i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Each will emphasize high repetitions with good form. Use a wide
+               grip to focus more on the back.</p>
+            <p class="card-text"><u>Form</u>: Grab the bar just outside of shoulder width apart. Lean back slightly and pull yourself
+              up, focusing on your back contraction. Bring your chin to the bar then lower yourself until you’re at
+              a dead hang.</p>
           </div>
         </div>
       </div>
+    </div><br>
 
-      <div class="row justify-content-md-center">
-        <div class="col-md-10">
-          <div class="card border-light mb-3">
-            <div class="card-header text-center h5">Seated Cable Rows</div>
-            <div class="card-body text-center">
-              <img src="row_cable.jpg" class="img-fluid" alt="Responsive image">
-              <p><i>(3 sets | 20-5, 15-8, 10-8)</i></p>
-              <p><u>Info</u>: There will be 3 sets. Each will be a drop set. Perform this exercise using a the close grip attachment. After the initial part of the set, drop the weight 15-20% to finish off the remaining repetitions. Increase the starting weight each set.</p>
-              <p><u>Form</u>: Grabbing the close grip attachment, use your legs to push yourself away from the weight stack. Slightly lean forward and allow the weight to stretch out your back. As you start to pull the handle toward you, keeping your elbows close to your body and pulling toward your belly button, start leaning back until you slightly lean back when you squeeze the weight. Return to slightly leaning forward with the weight stretching the back.</p>
-            </div>
+    <div class="container">
+      <div class="card-deck mx-auto" style="max-width: 36rem;">
+        <div class="card">
+          <div class="card-header text-center h5">Seated Cable Rows</div>
+          <img class="card-img-top" src="row_cable.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text text-center"><i>(3 sets | 20-5, 15-8, 10-8)</i></p>
+            <p class="card-text"><u>Info</u>: There will be 3 sets. Each will be a drop set. Perform this exercise using a the close
+              grip attachment. After the initial part of the set, drop the weight 15-20% to finish off the remaining
+              repetitions. Increase the starting weight each set.</p>
+            <p class="card-text"><u>Form</u>: Grabbing the close grip attachment, use your legs to push yourself away from the weight
+              stack. Slightly lean forward and allow the weight to stretch out your back. As you start to pull the
+              handle toward you, keeping your elbows close to your body and pulling toward your belly button, start
+              leaning back until you slightly lean back when you squeeze the weight. Return to slightly leaning
+              forward with the weight stretching the back.</p>
           </div>
         </div>
       </div>
-    </div>
+    </div><br>
+    <!-- FOOTER -->
+    <footer class="page-footer font-small" style="background-color: #fd7e14;">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright</div>
+    </footer>
 
 </html>
